Test site color change

--- a/_sass/color_schemes/light.scss
+++ b/_sass/color_schemes/light.scss
@@ -1,5 +1,5 @@
 $color-scheme: light !default;
-$body-background-color: $white !default;
+$body-background-color: #0A0A0A !default;
 $body-heading-color: $grey-dk-300 !default;
 $body-text-color: $grey-dk-100 !default;
 $link-color: $purple-000 !default;
