--- a/_sass/color_schemes/light.scss
+++ b/_sass/color_schemes/light.scss
@@ -1,10 +1,10 @@
 $color-scheme: light !default;
-$body-background-color: #0A0A0A !default;
+$body-background-color: #121212 !default;
 $body-heading-color: $grey-dk-300 !default;
 $body-text-color: $grey-dk-100 !default;
-$link-color: $purple-000 !default;
+$link-color: #EEE1c6 !default;
 $nav-child-link-color: $grey-dk-100 !default;
-$sidebar-color: $grey-lt-000 !default;
+$sidebar-color: #0A0A0A !default;
 $base-button-color: #f7f7f7 !default;
 $btn-primary-color: $purple-100 !default;
 $code-background-color: $grey-lt-000 !default;
