Changing the colors

--- a/_sass/color_schemes/dark_bucksly.scss
+++ b/_sass/color_schemes/dark_bucksly.scss
@@ -1,6 +1,6 @@
 @import "./color_schemes/dark";
 
-$color-scheme: dark;
+$color-scheme: dark_bucksly;
 $body-background-color: #222222;
 $body-heading-color: $grey-lt-000;
 $body-text-color: #ffffff;
