--- a/_sass/color_schemes/dark.scss
+++ b/_sass/color_schemes/dark.scss
@@ -1,4 +1,4 @@
-$color-scheme: dark_bucksly;
+$color-scheme: dark;
 $body-background-color: #222222;
 $body-heading-color: $grey-lt-000;
 $body-text-color: #ffffff;
