--- a/_sass/color_schemes/dark.scss
+++ b/_sass/color_schemes/dark.scss
@@ -2,7 +2,7 @@ $color-scheme: dark;
 $body-background-color: #222222;
 $body-heading-color: $grey-lt-000;
 $body-text-color: #ffffff;
-$link-color: $blue-000;
+$link-color: #ffffff;
 $nav-child-link-color: $grey-dk-000;
 $sidebar-color: #1b1b1b;
 $base-button-color: $grey-dk-250;
