--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -4,6 +4,7 @@
   z-index: 0;
   display: flex;
   flex-wrap: wrap;
+  background-image: url('../../assets/images/big-graph.jpg');
   background-color: $sidebar-color;
 
   @include mq(md) {
