changed link color

--- a/_sass/color_schemes/dark.scss
+++ b/_sass/color_schemes/dark.scss
@@ -6,7 +6,7 @@ $link-color: #ffffff;
 $nav-child-link-color: $grey-dk-000;
 $sidebar-color: #1b1b1b;
 $base-button-color: $grey-dk-250;
-$btn-primary-color: $blue-200;
+$btn-primary-color: #ffffff;
 $code-background-color: #31343f; // OneDarkJekyll default for syntax-one-dark-vivid
 $code-linenumber-color: #dee2f7; // OneDarkJekyll .nf for syntax-one-dark-vivid
 $feedback-color: darken($sidebar-color, 3%);
